# openscenegraph-cross-platform-examples

./: .gitignore  README.md  build-ios-ex  build-ios-osg  build-osg-ios  entity-hierarchy.html  gen_examples  generate
01.EmbedResource/android/app/: CMakeLists.txt
01.EmbedResource/android/app/src/main/: AndroidManifest.xml
01.EmbedResource/desktop/: CMakeLists.txt
01.EmbedResource/desktop/src/: Application.h  Example.h  Features.txt  VBOSetupVisitor.h  core.h  main.h  openscenegraph.cpp  openscenegraph01.cpp  openscenegraph02.cpp  openscenegraph03.cpp  openscenegraphDB.cpp  openscenegraphDefines.h  openscenegraphGA.cpp  openscenegraphPlugins.cpp  openscenegraphPlugins01.cpp  openscenegraphPlugins02.cpp  openscenegraphUtil.cpp  openscenegraphViewer.cpp  openscenegraphWrappers01.cpp  openscenegraphWrappers02.cpp  openscenegraphWrappersGroup.cpp  openscenegraphWrappersMatrixTransform.cpp  openscenegraphWrappersNode.cpp  openscenegraphWrappersObject.cpp  openthreads.cpp  openthreadsDefines.h  render.h  resources.h  scene.h
01.EmbedResource/web/: CMakeLists.txt
01.EmbedResource/web/src/: Application.h  Example.h  Features.txt  core.h  format.h  main.cpp  main.h  render.h  resource.h  resources.h  scene.h
01/android/app/: CMakeLists.txt  build.gradle
01/android/app/src/main/: AndroidManifest.xml
01/desktop/: CMakeLists.txt
01/desktop/src/: Application.h  Features.txt  ResourceStreamBuffer.h  logging.h  main.cpp  rendering.h  resources.h
01/desktop/src-gen/: Application.h  Features.txt  Logger.h  Resource.h  functions.h  main.h  rendering.h  resources.h
01/web/: CMakeLists.txt
01/web/src/: Application.h  Features.txt  Logger.h  Resource.h  logging.h  main.cpp  rendering.h  resources.h
02.TextureImage/desktop/: CMakeLists.txt
02.TextureImage/desktop/src/: Application.h  Example.h  Features.txt  core.h  main.cpp  main.h  scene.h
02.TextureImage/ios/: CMakeLists.txt
02.TextureImage/ios/ex02.xcodeproj/: project.pbxproj
02.TextureImage/ios/ex02.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
02.TextureImage/ios/src/: Application.h  Example.h  Features.txt  core.h  library.cpp  main.h  render.h  scene.h
02.TextureImage/ios/xcodeproject/App/: Features.txt  ios.mm
02.TextureImage/ios/xcodeproject/ex02.xcodeproj/: project.pbxproj
02.TextureImage/ios/xcodeproject/ex02.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
02.TextureImage/web/: CMakeLists.txt
02.TextureImage/web/src/: Application.h  Example.h  Features.txt  core.h  main.h  scene.h
03.HTTPClient/desktop/: CMakeLists.txt
03.HTTPClient/desktop/src/: Application.h  Example.h  Features.txt  core.h  log.h  main.cpp  main.h  network-extlib.h  network.h
03.HTTPClient/web/: CMakeLists.txt
03.HTTPClient/web/src/: Application.h  Example.h  Features.txt  core.h  main.cpp  main.h  network-extlib.h  network.h
03.RemoteDebugging/android/app/: CMakeLists.txt
03.RemoteDebugging/desktop/: CMakeLists.txt
03.RemoteDebugging/desktop/src/: Application.h  Debugger.h  Example.h  Features.txt  HTTPClientMongoose.h  Reporter.h  debug-extlib.h  debug.h  library-mongoose.h  main.cpp  network-extlib.cpp  network-extlib.h  network.h  resource.h  scene.h
03.RemoteDebugging/desktop/src/network/: library-mongoose.cpp
03.RemoteDebugging/ios/: CMakeLists.txt
03.RemoteDebugging/ios/src/: Application.h  Debugger.h  Example.h  Features.txt  HTTPClient.h  HTTPClientMongoose.h  Resource.h  debug.h  library-json.h  log.h  scene.h
03.RemoteDebugging/ios/src/debug/: debug.h
03.RemoteDebugging/ios/src/network/: network.h
03.RemoteDebugging/ios/xcodeproject/App/: ViewController.h
03.RemoteDebugging/ios/xcodeproject/ex03.xcodeproj/: project.pbxproj
03.RemoteDebugging/ios/xcodeproject/ex03.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
03.RemoteDebugging/web/: CMakeLists.txt
03.RemoteDebugging/web/src/: Application.h  DebugPage.h  DebugPageDesc.h  Debugger.h  Example.h  Features.txt  HTTPClientFetch.h  VBOSetupVisitor.h  debug.h  log.h  main.cpp  network.h  render.h  scene.h
03.RemoteDebugging/web/src/network/: HTTPClient.h  library-fetch.h  network.h
04.RemoteDebugging/android/app/: CMakeLists.txt  build.gradle
04.RemoteDebugging/android/app/src/main/: AndroidManifest.xml
04.RemoteDebugging/desktop/: CMakeLists.txt
04.RemoteDebugging/desktop/src/: Application.h  DebugPage.h  Debugger.h  Example.h  Features.txt  HTTPClient.h  HTTPClientMongoose.h  core.h  debug.h  format.h  main.cpp  main.h  network-extlib.h  network.h
04.RemoteDebugging/web/: CMakeLists.txt
04.RemoteDebugging/web/src/: Application.h  Debugger.h  Example.h  Features.txt  Reporter.h  core.h  debug.h  format.h  main.cpp  main.h  network-extlib.h  network.h  resources.h  scene.h
05.NodeSelection/desktop/: CMakeLists.txt
05.NodeSelection/desktop/src/: Application.h  Features.txt  core.h  input.h  main.cpp  main.h  render.h  resource.h  scene.h
libs/OpenSceneGraph/: CMakeLists.txt
libs/OpenSceneGraph/include/android/osg/: GL
libs/OpenSceneGraph/src/: OpenThreads.cpp  osg-01.cpp  osg-02.cpp  osg-03.cpp  osgDB.cpp  osgDB.mm  osgGA.cpp  osgUtil.cpp  osgViewer-Linux.cpp  osgViewer-linux.cpp  osgViewer-macos.mm  osgViewer.cpp  osgdb_imageio.cpp  osgdb_osg.cpp  osgdb_png.cpp  osgdb_serializers_osg-Drawable.cpp  osgdb_serializers_osg-Geode.cpp  osgdb_serializers_osg-Geometry.cpp  osgdb_serializers_osg-Group.cpp  osgdb_serializers_osg-LibraryWrapper.cpp  osgdb_serializers_osg-MatrixTransform.cpp  osgdb_serializers_osg-Node.cpp  osgdb_serializers_osg-Object.cpp  osgdb_serializers_osg-Transform.cpp
libs/OpenSceneGraph/src-ios/: OpenThreads.mm  osgDB.mm  osgGA.mm  osgdb_imageio.mm  osgdb_serializers_osg-Drawable.mm  osgdb_serializers_osg-Geode.mm  osgdb_serializers_osg-MatrixTransform.mm  osgdb_serializers_osg-Transform.mm
libs/json-android/: CMakeLists.txt
libs/json-android/include/nlohmann/: json.hpp
libs/json-android/src/: json-android.cpp
libs/libpng-android/: CMakeLists.txt
libs/libpng-android/src/: libpng.cpp
libs/lua/: CMakeLists.txt  lua.c
libs/mongoose/: CMakeLists.txt  mongoose.cpp
(+872 files in other folders)
